[package]
name = "parallel_fsm_rv"
version = "0.1.0"
authors = ["Alexa VanHattum <amv94@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-fsm = "0.4.0"
strum = "0.13.0"
strum_macros = "0.13.0"
clap = "2.33.2"
