[package]
name = "parallel_fsm_rv"
version = "0.1.0"
authors = ["Alexa VanHattum <amv94@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
crossbeam = "0.8.0"
itertools = "0.9.0"
log = "0.4.11"
num_cpus = "1.13.0"
rust-fsm = "0.4.0"
strum = "0.13.0"
strum_macros = "0.13.0"
